--- a/vignettes/TMT_PSM_QC_Summarisation.Rmd
+++ b/vignettes/TMT_PSM_QC_Summarisation.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 
 Quantitative proteomics using isobaric tagging such as Tandem Mass Tags (TMT) has a considerable benefit over Label-Free Quantification (LFQ) in that up to 16 samples can be quantified for each Peptide Spectrum Match (PSM). This greatly reduces the extent of missing values that may be present between different MS runs due to the limited number of ions that can be fragmented in each run and the associated issue of peptides being identified in only a subset of runs [@http://zotero.org/users/5634351/items/ME322P2A]. As such, it standardises the features quantified in each sample, simplifying the comparison between samples and increasing quantification accuracy of summarised features such as proteins.
 
-However, TMT does suffer from ratio compression, which should be avoiding by perfomring quantification with SPS MS3 [@http://zotero.org/users/5634351/items/ZK69WYZ2]. Since quantification is performed in MS3, the TMT ions being quantified are therefore relatively low intensity and as such, careful QC of the PSM-level quantification is recommended prior to summarisation to protein-level abundances.
+However, TMT does suffer from ratio compression, which should be avoiding by performing quantification with SPS MS3 [@http://zotero.org/users/5634351/items/ZK69WYZ2]. Since quantification is performed in MS3, the TMT ions being quantified are therefore relatively low intensity and as such, careful QC of the PSM-level quantification is recommended prior to summarisation to protein-level abundances.
 
 Here, we will assess the following:
 
@@ -34,61 +34,72 @@ We will then:
 - Summarise to protein-level abundances
 
 
-```{r}
-suppressMessages(library(camprotR))
-suppressMessages(library(MSnbase))
-suppressMessages(library(ggplot2))
-suppressMessages(library(tidyr))
-suppressMessages(library(dplyr))
+```{r, message=FALSE}
+library(camprotR)
+library(MSnbase)
+library(ggplot2)
+library(tidyr)
+library(dplyr)
 ```
 
 We start by reading in a file containing PSM-level output from Proteome Discoverer (PD). Here we are using a truncated file containing the first 1,000 PSMs only.
 ```{r}
-psm_data <- read.delim(system.file("extdata", "TMT_PSMs.txt.gz", package = "camprotR"), stringsAsFactors=FALSE)
+psm_data <- read.delim(
+  system.file("extdata", "TMT_PSMs.txt.gz", package = "camprotR"), 
+  stringsAsFactors = FALSE
+)
 ```
 
 The first step is to remove contaminant proteins. These were defined using the cRAP database (REF). Below, we parse the cRAP fasta to extract the IDs for the cRAP proteins, in both 'cRAP' format and Uniprot IDs for these proteins.
 ```{r}
-crap_fasta_inf <- system.file("extdata", "cRAP_FullIdentifiers.fasta.gz", package = "camprotR")
+crap_fasta_inf <- system.file(
+  "extdata", "cRAP_FullIdentifiers.fasta.gz", 
+  package = "camprotR"
+)
 
 # Load the cRAP FASTA used for the PD search
 crap.fasta <- Biostrings::fasta.index(crap_fasta_inf, seqtype = "AA")
 
 # Extract the non cRAP UniProt accessions associated with each cRAP protein
 crap.accessions <- crap.fasta %>% 
-pull(desc) %>% 
-stringr::str_extract_all("(?<=\\|).*?(?=\\|)") %>% 
-unlist()
+  pull(desc) %>% 
+  stringr::str_extract_all("(?<=\\|).*?(?=\\|)") %>% 
+  unlist()
 ```
 
-We can then supply these cRAP protein IDs to `camprotR::parse_features` which will remove features which may originate from contaminates, as well as features which don't have a unique master protein. See `?parse_features` for further details, including the removal of 'associated cRAP'.
+We can then supply these cRAP protein IDs to `parse_features` which will remove features which may originate from contaminants, as well as features which don't have a unique master protein. See `?parse_features` for further details, including the removal of 'associated cRAP'.
 ```{r}
-psm_data_flt <-camprotR::parse_features(psm_data , crap_proteins=crap.accessions, TMT=TRUE, level='PSM')
+psm_data_flt <- parse_features(
+  psm_data, 
+  crap_proteins = crap.accessions, 
+  TMT = TRUE, 
+  level = 'PSM'
+)
 ```
+
 We now store the filtered PSM data in an MSnSet, the standard data object for proteomics in R.
 ```{r}
 # Abundance columns for TMT PD-output start with Abundance 
 abundance_cols <- colnames(psm_data_flt)[grepl('Abundance.', colnames(psm_data_flt))]
 
-.e <- as.matrix(psm_data_flt[,abundance_cols])
-.f <- psm_data_flt[,setdiff(colnames(psm_data_flt), abundance_cols)]
+.e <- as.matrix(psm_data_flt[, abundance_cols])
+.f <- psm_data_flt[, setdiff(colnames(psm_data_flt), abundance_cols)]
 
 # update the column names to remove the 'Abundance.` prefix
 colnames(.e) <- gsub('Abundance.', '', colnames(.e))
 
-# we don't have 'phenotype' data to add so we just define the 'expression' data and 'feature' data
-psm <- MSnbase::MSnSet(exprs=.e, fData=.f)
+# we don't have 'phenotype' data to add so we just define the 
+# 'expression' data and 'feature' data
+psm <- MSnbase::MSnSet(exprs = .e, fData = .f)
 ```
 
-The distribution of TMT intensities obtained by Orbitrap has been observed to have a 'notch' where few values are observed [@http://zotero.org/users/5634351/items/DLWEN74B]. This presence of the notch is dependent on the MS settings, most notably AGC and maximum injection time, and the abundance of the peptides injected. We can inspect the notch using the `plot_TMT_notch` function, which annotates the notch region and the proportion of values below the upper notch boundary. 
+The distribution of TMT intensities obtained by Orbitrap has been observed to have a 'notch' where few values are observed [@http://zotero.org/users/5634351/items/DLWEN74B]. This presence of the notch is dependent on the MS settings, most notably automatic gain control (AGC) target and maximum injection time, and the abundance of the peptides injected. We can inspect the notch using the `plot_TMT_notch` function, which annotates the notch region and the proportion of values below the upper notch boundary. 
 
 ```{r, fig.height=5, fig.width=5, fig.fullwidth=TRUE, fig.cap="TMT intensities, with notch region denoted by vertical lines"}
-p <- plot_TMT_notch(psm)
-print(p)
-
+plot_TMT_notch(psm)
 ```
 
-Sub-notch values are systematic under-estimates (Currently unpublished findings). The impact of sub-notch values on summarised protein-level abundances will depend on the number of sub-notch values and, more importantly, the proportion of PSMs below the notch for a given protein. We can obtain the per-protein notch metrics using `get_notch_per_protein` and plot the number and fraction with `plot_below_notch_per_prot` and `plot_fraction_below_notch_per_prot` respectively. 
+Sub-notch values are systematic under-estimates (currently unpublished findings). The impact of sub-notch values on summarised protein-level abundances will depend on the number of sub-notch values and, more importantly, the proportion of PSMs below the notch for a given protein. We can obtain the per-protein notch metrics using `get_notch_per_protein` and plot the number and fraction with `plot_below_notch_per_prot` and `plot_fraction_below_notch_per_prot` respectively. 
 
 In the case, we see that most proteins have zero PSM intensities below the notch. The vast majority of protein have <10% PSMs at/below the notch, indicating the notch is unlikely to be problematic with this dataset.
 ```{r, fig.height=5, fig.width=5, fig.fullwidth=TRUE, fig.cap="Count of TMT intensities below the notch per protein"}
@@ -103,60 +114,54 @@ plot_fraction_below_notch_per_prot(notch_per_protein)
 
 We will still want to remove low Signal:Noise (S:N) PSMs, since the quantification values will be less accurate and there will be more missing values and sub-notch values. We can inspect the relationship between S:N and missing values using the `plot_missing_SN` function.
 
-Note that where the signal:noise>10, there are far fewer missing values
-```{r, fig.height=5, fig.width=5, fig.fullwidth=TRUE, fig.cap="Missing values per PSM, in relation to the signal:noise ratio"}
-p <- plot_missing_SN(psm, bins=27)
-print(p)
+Note that where the signal:noise > 10, there are far fewer missing values.
+```{r, fig.height=5, fig.width=7, fig.fullwidth=TRUE, fig.cap="Missing values per PSM, in relation to the signal:noise ratio"}
+plot_missing_SN(psm, bins = 27)
 ```
 
 We can also look into this relationship at the tag level using `plot_missing_SN_per_sample`. In this case, there is no tag which appears to have a high proportion of missing values when signal:noise > 10.
-```{r, fig.height=5, fig.width=5, fig.fullwidth=TRUE, fig.cap="Missing values per tag, in relation to the signal:noise ratio"}
-p <- plot_missing_SN_per_sample(psm, bins=27)
-print(p)
+```{r, fig.height=5, fig.width=7, fig.fullwidth=TRUE, fig.cap="Missing values per tag, in relation to the signal:noise ratio"}
+plot_missing_SN_per_sample(psm, bins = 27)
 ```
 
-Based on the above, we will filter the PSMs to only retain those with S:N>10 using `filter_TMT_PSMs`. Using the same function, we will also remove PSMs with interference/co-isolation >50%.
+Based on the above, we will filter the PSMs to only retain those with S:N > 10 using `filter_TMT_PSMs`. Using the same function, we will also remove PSMs with interference/co-isolation >50%.
 ```{r}
-psm_filt_sn_int <- filter_TMT_PSMs(psm, inter_thresh=50, sn_thresh=10)
+psm_filt_sn_int <- filter_TMT_PSMs(psm, inter_thresh = 50, sn_thresh = 10)
 ```
 We can then re-plot to see how this affects the notch.
-```{r, fig.height=3.5, fig.width=3.5, fig.fullwidth=TRUE, fig.cap="Notch plots after filtering", fig.show='hold'}
-p <- plot_TMT_notch(psm) +
+```{r, fig.height=3.4, fig.width=3.4, fig.fullwidth=TRUE, fig.cap="Notch plots after filtering", fig.show='hold'}
+plot_TMT_notch(psm) +
   ggtitle('Before filtering') +
-  theme_camprot(base_size=10)
-print(p)
+  theme_camprot(base_size = 10)
 
-p <- plot_TMT_notch(psm_filt_sn_int) +
+plot_TMT_notch(psm_filt_sn_int) +
   ggtitle('After filtering') +
-  theme_camprot(base_size=10)
-print(p)
-
-
+  theme_camprot(base_size = 10)
 ```
 
 Now that we have inspected the PSM-level quantification and filtered the PSMs, we can summarise the PSMs to protein-level abundances. 
 
-For PSM to protein summarisation, we will use `MSnbase::combineFeatures(method='robust')`. This approach can handle missing values but it only makes sense to use PSMs quantified across enough proteins and to retain proteins with enough PSMs.
+For PSM to protein summarisation, we will use `MSnbase::combineFeatures(method = 'robust')`. This approach can handle missing values but it only makes sense to use PSMs quantified across enough proteins and to retain proteins with enough PSMs.
 
-Here, we will use PSMs with at most 5/10 NAs and proteins with at least three finite quantification values in a given sample. Note that this means a given protein may still have a mixture of finite and NA values. For example, if a protein has 3 PSMs and the PSMs have missing values such that some samples are still quantified in all 3 PSMs, then the protein will be quantified in these samples, but NA where missing values are present. Thus, each protein-level quantification will be derived from at least 3 PSM intensities, where each PSM was quantified in at least 5 samples.
+Here, we will use PSMs with at most 5/10 `NA`s and proteins with at least three finite quantification values in a given sample. Note that this means a given protein may still have a mixture of finite and `NA` values. For example, if a protein has 3 PSMs and the PSMs have missing values such that some samples are still quantified in all 3 PSMs, then the protein will be quantified in these samples, but `NA` where missing values are present. Thus, each protein-level quantification will be derived from at least 3 PSM intensities, where each PSM was quantified in at least 5 samples.
 
 
 ```{r, fig.height=5, fig.width=5, fig.fullwidth=TRUE, fig.cap="Tally of PSMs per protein"}
 psm_filt_sn_int_missing <- psm_filt_sn_int %>% 
-  filterNA(pNA=0.5) %>% # remove features observed in fewer than 
-  restrict_features_per_protein(min_features=2)
+  MSnbase::filterNA(pNA = 0.5) %>% # remove features observed in fewer than 
+  restrict_features_per_protein(min_features = 2)
 ```
 
-Below, we perform the summarisation. Note that robust summarisation requires log-transformed intensities. If desired, one can exponeniate the protein-level intensities post-summarisation, as shown below 
+Below, we perform the summarisation. Note that robust summarisation requires log-transformed intensities. If desired, one can exponeniate the protein-level intensities post-summarisation, as shown below.
 ```{r}
-prot_group <- fData(psm_filt_sn_int_missing)$Master.Protein.Accessions
+prot_group <- MSnbase::fData(psm_filt_sn_int_missing)$Master.Protein.Accessions
 
 protein <- psm_filt_sn_int_missing %>%
-  log(base=2) %>%
-  MSnbase::combineFeatures(groupBy=prot_group, method='robust', maxit=1000)
+  log(base = 2) %>%
+  MSnbase::combineFeatures(groupBy = prot_group, method = 'robust', maxit = 1000)
 
-exprs(protein) <- 2^exprs(protein)
-
+Biobase::exprs(protein) <- 2^Biobase::exprs(protein)
 ```
+
 # References
 
