--- a/README.Rmd
+++ b/README.Rmd
@@ -2,3 +2,7 @@
 title: "camprotR"
 output: github_document
 ---
+
+<!-- badges: start -->
+[![codecov](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR/branch/master/graph/badge.svg)](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR)
+<!-- badges: end -->
