--- a/README.Rmd
+++ b/README.Rmd
@@ -4,5 +4,6 @@ output: github_document
 ---
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/CambridgeCentreForProteomics/camprotR/workflows/R-CMD-check/badge.svg)](https://github.com/CambridgeCentreForProteomics/camprotR/actions)
 [![codecov](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR/branch/master/graph/badge.svg)](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR)
 <!-- badges: end -->
