--- a/README.Rmd
+++ b/README.Rmd
@@ -5,5 +5,5 @@ output: github_document
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/CambridgeCentreForProteomics/camprotR/workflows/R-CMD-check/badge.svg)](https://github.com/CambridgeCentreForProteomics/camprotR/actions)
-[![codecov](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR/branch/master/graph/badge.svg)](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR)
+[![Codecov test coverage](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR/branch/master/graph/badge.svg)](https://codecov.io/gh/CambridgeCentreForProteomics/camprotR?branch=master)
 <!-- badges: end -->
