--- a/vignettes/crap.Rmd
+++ b/vignettes/crap.Rmd
@@ -127,7 +127,7 @@ accessions can change (slightly) over time.
 
 ```{r}
 ccp_tmp <- tempfile(fileext = ".fasta")
-download_crap(ccp_tmp, type = "ccp", add_crap = TRUE, verbose = TRUE)
+download_ccp_crap(ccp_tmp, add_crap = TRUE, verbose = TRUE)
 ```
 
 We can load this FASTA file into R and take a look.
@@ -185,22 +185,23 @@ head(names(mq))
 
 ## Make your own cRAP database
 
-You can add sequences easily enough to a FASTA database by just copying and
+You can add sequences easily enough to a cRAP FASTA database by just copying and
 pasting. However, for reproducibility purposes it is better to use an R script
 to generate your own custom cRAP database.
 
 Here we will generate a cRAP database based off of the CCP cRAP, but with
-some extra commercial protease sequences added to the end.
+some extra protease sequences added to the end.
 
 First you would download the CCP cRAP FASTA. The following chunk is not run by
-default as we have already downloaded it above.
+default as we have already downloaded it above. In this chunk we show the 
+"best practice" of naming the CCP cRAP FASTA file with the current UniProt release.
 
 ```{r, eval=FALSE}
 # download CCP cRAP
-download_crap(paste0(Sys.Date(), "_CCP_cRAP.fasta"), type = "ccp")
+download_ccp_crap(paste0(check_uniprot_release(), "_CCP_cRAP.fasta"), type = "ccp")
 ```
 
-Then you download the sequences you want to add into a FASTA file. 
+Then you download the sequences you want to add and save them into a FASTA file. 
 Here we'll get some protease sequences from the bacteria _Streptomyces griseus_. 
 We can download sequences from UniProt programmatically using the `httr` package.
 
@@ -212,41 +213,34 @@ payload <- list(
   format = "fasta"
 )
 
-tmp <- tempfile()
+griseus_tmp <- tempfile(fileext = ".fasta")
 response <- httr::GET(url = "https://www.uniprot.org/uploadlists/", 
                       query = payload, 
-                      config = httr::write_disk(tmp))
+                      config = httr::write_disk(griseus_tmp))
 ```
 
-Then we load the sequences into memory so we can adjust their headers.
-
-```{r}
-proteases <- Biostrings::readAAStringSet(tmp)
-proteases
-```
-
-We want to add cRAPXXX, where XXX is a number, to the headers. We can have
-a look at what the last number was in the CCP cRAP FASTA.
+Before we add these to our CCP cRAP FASTA, we just need to take note of what
+cRAP number the sequences headers stop at.
 
 ```{r}
 tail(names(ccp_crap))
 ```
 
-Using the `sub_crap()` function we can add the cRAP numbers to the sequence
-headers, starting at `cRAP128`.
+The final number is 127, so we want the cRAP numbering of the additional
+sequences to start at 128. Finally, we use the `append_crap_fasta()` function 
+from camprotR to add our _S. griseus_ sequences to our CCP cRAP FASTA.  
 
 ```{r}
-names(proteases) <- sub_crap(names(proteases), start = 128)
-proteases
+append_crap_fasta(
+  file = griseus_tmp,
+  crap_file = ccp_tmp,
+  add_crap = TRUE,
+  add_crap_start = 128
+)
 ```
 
-Lastly we use the `Biostrings` package to add the sequences onto the end of
-our CCP cRAP database. This chunk is not run by default.
+Lets just check that this worked properly. There should be 130 sequences now.
 
-```{r, eval=FALSE}
-Biostrings::writeXStringSet(
-  proteases,
-  filepath = paste0(Sys.Date(), "_CCP_cRAP.fasta"),
-  append = TRUE
-)
+```{r}
+Biostrings::readAAStringSet(ccp_tmp)
 ```
